container fixed height & overflow scroll

--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -25,9 +25,10 @@
 		background-color: $color-primary-2;
 		width: 100%;
 		max-width: 800px;
-		min-height: 600px;
+		height: 600px;
 		padding: 20px;
 		border: 5px solid $color-black;
-		border-radius: 20px;		
+		border-radius: 20px;	
+		overflow-y: scroll;	
 	}
 }
